# candidate-data-transformer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  api.py
app/ai/: __init__.py  factory.py  gemini_provider.py  llm_provider.py  prompts.py
app/cli/: __init__.py  main.py
app/confidence/: __init__.py  confidence_engine.py  engine.py
app/github/: client.py
app/mapper/: __init__.py  canonical_mapper.py
app/merger/: __init__.py  merge_engine.py
app/normalizers/: __init__.py  base.py  company.py  country.py  date.py  email.py  loader.py  phone.py  profile.py  skill.py  skills.py  url.py  urls.py
app/parsers/: __init__.py  csv_parser.py  github_parser.py  pdf_parser.py  resume_parser.py
app/projection/: __init__.py  projection_engine.py  projector.py
app/provenance/: __init__.py  engine.py  provenance_engine.py
app/schema/: __init__.py  candidate.py  common.py  education.py  experience.py
app/utils/: __init__.py  constants.py  helpers.py  logger.py
app/validator/: __init__.py  validator.py
config/: companies.json  countries.json  custom.json  default.json  output.json  skills.json  source_priority.json
docs/: architecture.md  prompts.md
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
tests/: test_confidence.py  test_csv.py  test_gemini.py  test_github_client.py  test_github_parser.py  test_merge.py  test_normalization.py  test_pdf.py  test_profile_normalizer.py  test_projection.py  test_provenance.py  test_resume_parser.py
(+14 files in other folders)
