[project]
name = "candidate-transformer"
version = "0.1.0"
description = "AI-Powered Multi-Source Candidate Data Transformer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "google-generativeai>=0.5.0",
    "requests>=2.31.0",
    "RapidFuzz>=3.8.0",
    "PyMuPDF>=1.24.0",
    "typer>=0.12.0",
    "phonenumbers>=8.13.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."]
